RWA-3564 fix easy code smells (#744)
* RWA-3564 fix easy code smells

* RWA-3564 fix easy code smells

* RWA-3564 fix easy code smells

* RWA-3564 fix easy code smells

* RWA-3564 fix easy code smells